[gd_scene load_steps=4 format=3 uid="uid://daw6uqywkm2o5"]

[ext_resource type="Script" uid="uid://bv1rmf8v2nbja" path="res://scenes/cake/recipe_icon.gd" id="1_07diw"]
[ext_resource type="Texture2D" uid="uid://b8jlwh8al2xtk" path="res://assets/images/cake/icons.png" id="1_o22uh"]
[ext_resource type="Texture2D" uid="uid://cn2d6ufhl2tfg" path="res://assets/images/cake/icon_marks.png" id="2_07diw"]

[node name="RecipeIcon" type="Node2D"]
script = ExtResource("1_07diw")

[node name="IngredientSprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_o22uh")
hframes = 3
vframes = 2

[node name="MarkSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_07diw")
hframes = 2
